feat: implement complete database schema with Prisma
- Add comprehensive database schema with 12 tables covering all platform features
- Implement user management, communities, courses, discussions, and gamification
- Set up proper foreign key relationships and constraints
- Add database migrations and seeding functionality
- Create database verification and testing utilities
- Update package.json with seed script
- All tests passing with proper constraint validation

Addresses requirements: 1.1, 2.1, 3.1, 4.1, 5.1, 6.1, 7.1

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts",
     "verify": "ts-node src/scripts/verify-setup.ts"
   },
   "keywords": ["learning", "community", "education", "platform"],
