--- a/package.json
+++ b/package.json
@@ -16,35 +16,42 @@
     "db:seed": "ts-node prisma/seed.ts",
     "verify": "ts-node src/scripts/verify-setup.ts"
   },
-  "keywords": ["learning", "community", "education", "platform"],
+  "keywords": [
+    "learning",
+    "community",
+    "education",
+    "platform"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
+    "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
-    "@prisma/client": "^5.7.1",
-    "zod": "^3.22.4",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "stripe": "^20.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.5",
+    "@types/stripe": "^8.0.416",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.3.3",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
+    "fast-check": "^3.15.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3",
-    "fast-check": "^3.15.0"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
