feat: implement comprehensive notification system
- Add notification and notification_preferences database tables
- Create email service with nodemailer for SMTP and development modes
- Build notification service with in-app and email delivery
- Add notification API routes for full CRUD operations
- Implement user preference management for notification types
- Create weekly digest functionality with batching
- Add job scheduler for automated digest delivery
- Integrate notifications with posts, comments, courses, and communities
- Add admin broadcast capabilities for community announcements
- Create comprehensive test suite for notification functionality
- Add cron job script for weekly digest automation

Supports notification types:
- Post likes and comment replies
- Course updates and publications
- Community announcements
- Membership approvals
- Achievement notifications
- Weekly digests

Includes professional HTML email templates and user preference controls.

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,19 @@ NODE_ENV=development
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
-# Email (SendGrid)
+# Email (SendGrid or SMTP)
 SENDGRID_API_KEY="SG...."
 FROM_EMAIL="noreply@yourplatform.com"
+
+# SMTP Configuration (alternative to SendGrid)
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+
+# Frontend URL (for email links)
+FRONTEND_URL="http://localhost:3000"
 
 # File Storage (AWS S3)
 AWS_ACCESS_KEY_ID="your-access-key"
