--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@types/nodemailer": "^7.0.5",
+    "@types/redis": "^4.0.10",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.12",
     "prisma": "^5.7.1",
+    "redis": "^5.10.0",
     "socket.io": "^4.7.4",
     "stripe": "^20.2.0",
     "zod": "^3.22.4"
